examples/test/testpolicy15777.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15777
  namespace: namespace389
spec:
  podSelector:
    matchLabels:
      key8: value29
      key47: value44
      key41: value43
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key26: value15
          key35: value3
          key42: value22
      podSelector:
        matchLabels:
          key24: value10
          key13: value29
